syntax = "proto3";

import "./ais.proto";
import "./readsb.proto";

enum EntityType {
    UNKNOWN = 0;
    ADSB = 1;
    AIS = 2;
}

// EntityStatus is the the main type of "update" exposed by an AirDash
// data source. Mostly, it is a pass-through to the more specific
// telemetry information; with common fields wrapped up top/
message EntityStatus {
    string id = 1;
    EntityType type = 2;

    // Common fields.
    double lat = 3;
    double lon = 4;
    double altitude = 5;
    double speed = 6;
    int64 last_updated_millis = 7;
    
    AircraftInfo aircraft_info = 10;
    ShipInfo ship_info = 11;
    repeated TrackPosition track = 16;
}

// AirDash's detailed information struct for aircraft.
message AircraftInfo {
    // Raw ADS-B data. Always present.
    AircraftMeta adsb_data = 1;

    // Tail number, if known.
    string tail_number = 2;

    // Operate name, if known.
    string operator = 3;

    // Type designator, if known, like "A1"
    string type_designator = 4;

    // Type code, if known, like "L1P"
    string type_code = 5;

    // Type name, if known, like "DOUGLAS A-1 Skyraider"/
    string type_name = 6;

    // Type wake turbulence category, like "M".
    string type_wtc = 7;

    // Country name, if known.
    string country_name = 8;
}

// AirDash's detailed information struct for ships.
message ShipInfo {
    // Last-received aggregated AIS data. Always present.
    PositionReport ais_data = 1;
}

// TrackPosition is an inner structure type, used in other messages here.
message TrackPosition {
    double lat = 1;
    double lon = 2;
    double altitude = 3;
    double speed = 4;
    int64 timestamp_millis = 5;
}